src/style.css
@font-face {
  font-family: Avenir;
  src: url(fonts/Avenir-Book.ttf);
  font-style: normal;
  font-weight: 300;
}

@font-face {
  font-family: Avenir;
  src: url(fonts/Avenir-Heavy.ttf);
  font-style: normal;
  font-weight: 800;
}

* {
  box-sizing: border-box;
}

body {
  font-family: Avenir, sans-serif;
}

.search-form {
  position: relative;
  margin-top: 20px;
}

.image {
  position: absolute;
  top: 25px;
  left: 26px;
}

.image-small {
  width: 11px;
  top: 15px;
  left: 13px;
}

.input {
  font-family: inherit;
  height: 70px;
  width: 100%;
  padding-left: 62px;
  background: #fff;
  border: 1px solid #e1e7ed;
  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
  border-radius: 4px;
}

.input-small {
  height: 42px;
  padding-left: 33px;
}

.input::placeholder {
  position: absolute;
  font-size: 16px;
  line-height: 22px;
  color: #3d4e61;
  top: 25px;
}

.input-small::placeholder {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 19px;
  top: 12px;
}

.input:hover {
  background: #fff;
  border: 1px solid #e1e7ed;
  box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2);
  border-radius: 4px;
}

.input:focus {
  outline: none;
  font-size: 16px;
  line-height: 22px;
  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
  border: 1px solid #e1e7ed;
  border-radius: 3px;
}

.input-small:focus {
  font-size: 14px;
}

